--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_dotenv: ^5.2.1
   http: ^1.4.0
+  fl_chart: ^1.0.0
 
 dev_dependencies:
   flutter_test:
